--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
             window.onload = function () {
                 // Begin Swagger UI call region
                 const ui = SwaggerUIBundle({
-                    url: "swagger.json", //Location of Open API spec in the repo
+                    url: "swagger.yaml", //Location of Open API spec in the repo
                     dom_id: '#swagger-ui',
                     deepLinking: true,
                     presets: [
